add: check,history,details and real time balance update
